--- a/gamingtax.html
+++ b/gamingtax.html
@@ -31,6 +31,7 @@
             <li class="logo"><a href="https://www.igt.com" target="_blank"><img src="images/igt_logo.png" alt="IGT Logo" id="igt-logo"></a></li>
             <li class="item"><a href="index.html">Home</a></li>
             <li class="item"><a href="gamingtax.html">Gaming Tax</a></li>
+            <li class="item"><a href="linkreads.html">Link Reads</a></li>
             <li class="item"><a href="linkrec.html">Link Reconcilation</a></li>
             <li class="item"><a href="membership.html">Membership Term</a></li>
             <li class="item button"><a href="https://support.igt.com/" target="_blank">Support</a></li>
