--- a/index.html
+++ b/index.html
@@ -88,8 +88,15 @@
                 <h2>GAT Service</h2>
                 <p>Real-time view of TITO status</p>
             </a>
+        </div>
+        <div class="category" id="ACJCategory" style="display:flex;">Advantage Club Jackpots</div> 
+        <div class="portal-group" id="ACJLink" style="display:flex;">
+            <a href="#" onclick="window.open(generatePortalLink(4, 1), '_blank');" class="portal">
+                <img src="images/link.png" alt="Portal Image" class="portal-image">
+                <h2>Advantage Club Jackpots</h2>
+                <p>Configuration portal for Advantage Club Jackpots (BIS UI)</p>
+            </a>
         </div>  
-    
-        <script src="scripts/home.js"></script>
+    <script src="scripts/home.js"></script>
 
 </body>
