--- a/linkreads.html
+++ b/linkreads.html
@@ -45,6 +45,7 @@
     <div class="card" max-width="600px">
         <div class="card-header">Link Reads</div>
         <div class="card-body">
+            <br><br>
 		    <table>
                 <tr>
                     <td></td>
@@ -56,8 +57,8 @@
                 </tr>
 				<tr>
                     <th>Current Value:</td>
-                    <td><input type="number" id="openingcurrentvalue" oninput="calculateopening()" step="0.01" value="0.00"></td>
-                    <td><input type="number" id="closingcurrentvalue" oninput="closingvalues()" step="0.01" value="0.00"></td>
+                    <td><input type="number" id="openingcurrentvalue" oninput="calculateVariance()" step="0.01" value="0.00"></td>
+                    <td><input type="number" id="closingcurrentvalue" oninput="calculateVariance()" step="0.01" value="0.00"></td>
                     <td></td>
                     <td></td>
                     <td><input type="number" id="increment" oninput="calculateexpected()" step="0.000001" value="0.000000"></td>
@@ -93,6 +94,7 @@
     <div class="card" max-width="600px">
         <div class="card-header">Link Reconcilation</div>
         <div class="card-body">
+            <br><br>
 		    <table>
                 <tr>
                     <td><strong>Turnover</strong></td>
