--- a/membership.html
+++ b/membership.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
 	<link rel="shortcut icon" type="x-icon" href="images/igt.png">
+    <link rel="apple-touch-icon" href="images/ben_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/stylesnav.css">
     <link rel="stylesheet" href="styles/styles.css">
-	<title>Advantage Club Web Portal</title>
+	<title>Advantage Club Web Portal - Membership Term Calculator</title>
     <script
     src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
