--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="shortcut icon" type="x-icon" href="images/igt.png">
     <link rel="apple-touch-icon" href="images/ben_logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="styles/stylesnav.css">
     <link rel="stylesheet" href="styles/styles.css">
 	<title>Advantage Club Web Portal</title>
