--- a/membership.html
+++ b/membership.html
@@ -31,6 +31,7 @@
             <ul class="menu">
                 <li class="logo"><a href="https://www.igt.com" target="_blank"><img src="images/igt_logo.png" alt="IGT Logo" id="igt-logo"></a></li>
                 <li class="item"><a href="index.html">Home</a></li>
+                <li class="item"><a href="meters.html">Gaming Meters</a></li>
                 <li class="item"><a href="gamingtax.html">Gaming Tax</a></li>
                 <li class="item"><a href="linkreads.html">Link Reads</a></li>
                 <li class="item"><a href="linkrec.html">Link Reconcilation</a></li>
