--- a/link-reads.html
+++ b/link-reads.html
@@ -40,36 +40,36 @@
                     </tr>
                     <tr>
                         <th>Current Value:</td>
-                        <td><input type="number" id="openingcurrentvalue" oninput="calculateVariance()" step="0.01" value="0.00" tabindex="1"></td>
-                        <td><input type="number" id="closingcurrentvalue" oninput="calculateVariance()" step="0.01" value="0.00" tabindex="2"></td>
+                        <td><input type="number" id="openingcurrentvalue" oninput="calculateVariance()" step="0.01" value="0" inputmode="decimal" tabindex="1"></td>
+                        <td><input type="number" id="closingcurrentvalue" oninput="calculateVariance()" step="0.01" value="0" inputmode="decimal" tabindex="2"></td>
                         <td></td>
                         <td></td>
-                        <td><input type="number" id="increment" oninput="calculateexpected()" step="0.000001" value="0.000000" tabindex="4"></td>
+                        <td><input type="number" id="increment" oninput="calculateexpected()" step="0.000001" value="0.000000"  inputmode="decimal" tabindex="4"></td>
     
                     </tr>
                     <tr>
                         <th><p>Turnover</p></td>
-                        <td><input type="number" id="openingturnover" oninput="calculateturnover()" step="0.01" value="0.00" tabindex="1"></td>
-                        <td><input type="number" id="closingturnover" oninput="calculateturnover()" step="0.01" value="0.00" tabindex="2"></td>
-                        <td><input type="number" id="minusturnover" oninput="calculateturnover()" step="0.01" value="0.00" tabindex="3"></td>
+                        <td><input type="number" id="openingturnover" oninput="calculateturnover()" step="0.01" value="0" inputmode="decimal" tabindex="1"></td>
+                        <td><input type="number" id="closingturnover" oninput="calculateturnover()" step="0.01" value="0" inputmode="decimal" tabindex="2"></td>
+                        <td><input type="number" id="minusturnover" oninput="calculateturnover()" step="0.01" value="0" inputmode="decimal" tabindex="3"></td>
                         <td id= "turnovermovement"></td>
                         <td></td>
                     </tr>
                                     <tr>
                         <th><p>Hits</p></td>
-                        <td><input type="number" id="openinghits" oninput="calculatehits()" step="1" value="0" tabindex="1"></td>
-                        <td><input type="number" id="closinghits" oninput="calculatehits()" step="1" value="0" tabindex="2"></td>
-                        <td><input type="number" id="minushits" oninput="calculatehits()" step="1" value="0" tabindex="3"></td>
+                        <td><input type="number" id="openinghits" oninput="calculatehits()" step="1" value="0"  inputmode="decimal" tabindex="1"></td>
+                        <td><input type="number" id="closinghits" oninput="calculatehits()" step="1" value="0"  inputmode="decimal" tabindex="2"></td>
+                        <td><input type="number" id="minushits" oninput="calculatehits()" step="1" value="0"  inputmode="decimal" tabindex="3"></td>
                         <td id="hitsmovement"></td>
                         <td>Reset Value</td>
                     </tr>
                     <tr>
                         <th><p>Wins</p></td>
-                        <td><input type="number" id="openingwins" oninput="calculatewins()" step="0.01" value="0.00" tabindex="1"></td>
-                        <td><input type="number" id="closingwins" oninput="calculatewins()" step="0.01" value="0.00" tabindex="2"></td>
-                        <td><input type="number" id="minuswins" oninput="calculatewins()" step="0.01" value="0.00" tabindex="3"></td>
+                        <td><input type="number" id="openingwins" oninput="calculatewins()" step="0.01" value="0" inputmode="decimal" tabindex="1"></td>
+                        <td><input type="number" id="closingwins" oninput="calculatewins()" step="0.01" value="0" inputmode="decimal" tabindex="2"></td>
+                        <td><input type="number" id="minuswins" oninput="calculatewins()" step="0.01" value="0" inputmode="decimal" tabindex="3"></td>
                         <td id= "winsmovement"></td>
-                        <td><input type="number" id="resetvalue" oninput="calcualteresets()" step="0.01" value="0.00" tabindex="5"></td>
+                        <td><input type="number" id="resetvalue" oninput="calcualteresets()" step="0.01" value="0" inputmode="decimal" tabindex="4"></td>
                     </tr>
                 </table>
             </div>
