--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/menu.css">
     <!--boxicons.com cdn link-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -115,7 +115,7 @@
 
     <section class="home-section">
         <div class="home-content">
-            <i class='bx bxs-ghost' ></i>
+            <i class='bx bxs-game'></i>
         </div>
     </section>
     <main class="content">
