--- a/nav/nav.html
+++ b/nav/nav.html
@@ -6,7 +6,7 @@
     </div>
     <ul class="nav-links">
         <li>
-            <a href="#">
+            <a href="index.html">
                 <i class='bx bx-home-alt-2' ></i>
                 <span class="link_name">Home</span>
             </a>
@@ -57,12 +57,12 @@
         </ul>
         </li>
         <li>
-            <a href="#">
+            <a href="web-apps.html">
                 <i class='bx bx-link-alt' ></i>
-                <span class="link_name">Links</span>
+                <span class="link_name">Programs</span>
             </a>
             <ul class="sub-menu blank">
-                <li><a class="link_name" href="links.html">Links</a></li>
+                <li><a class="link_name" href="web-apps.html">Web Apps</a></li>
             </ul>
         </li>
         <li>
@@ -98,6 +98,7 @@
     </div>
     <section class="home-section">
         <div class="home-content">
+            <i class='bx bxs-game'></i>
             <span class="text">Ben's Gaming Toolbox</span>
         </div>
     </section>
