--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="apple-touch-icon" href="images/ben_logo.png">
 
     <link rel="stylesheet" href="style/menu.css">
+    <link rel="stylesheet" href="style/index.css">
     <!--boxicons.com cdn link-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script defer src="scripts/script.js"></script>
     <script defer src="scripts/menu.js"></script>
 
-    <title>Ben's Gaming Toolbox</title>
+    <title>Gaming Toolbox</title>
 </head>
     
 <body>
@@ -24,11 +25,15 @@
     
     <main class="content">
         <br><br><br><br>
-        <i class='bx bxs-game'></i>
-        <i class='bx bx-ghost' ></i>
-        <i class='bx bx-ghost' ></i>
-        <i class='bx bx-ghost' ></i>
-        <i class='bx bx-ghost' ></i>
+        <i style="color:#fdff00;" class='bx bxs-game'></i>
+        <i style="color:#ea82e5;" class='bx bx-ghost' ></i>
+        <i style="color:#46bfee;" class='bx bx-ghost' ></i>
+        <i style="color:#d03e19;" class='bx bx-ghost' ></i>
+        <i style="color:#db851c;" class='bx bx-ghost' ></i>
+        <br>
+        Welcome to the Gaming Toolbox
+        <br><br><br><br><br>
+        Click <i style="color:#fdff00;" class='bx bxs-game'></i> to begin
     </main>
 
 </body>
