--- a/nav/nav.html
+++ b/nav/nav.html
@@ -24,6 +24,7 @@
         </div>
         <ul class="sub-menu">
             <li><a class="link_name" href="#">Gaming</a></li>
+            <li><a href="cash-flow.html">Cash Flow</a></li>
             <li><a href="meters.html">Meters</a></li>
             <li><a href="gaming-tax.html">Gaming Tax</a></li>
             <li><a href="link-reconciliation.html">Link Reconciliation</a></li>
