--- a/link-reconciliation.html
+++ b/link-reconciliation.html
@@ -60,23 +60,25 @@
                     </tr>
                     <tr>
                         <td><p>Total Base value:</p></td>
-                        <td id="totalbasevalue"></td>
+                        <td><p id="totalbasevalue" class="calculation"></p></td>
                     </tr>
                     <tr>
                         <td><p>Expected Contribution:</p></td>
-                        <td id="expected"></td>
+                        <td><p id="expected" class="calculation"></p></td>
                     </tr>
                     <tr>
                         <td><p>Actual Contribution:</p></td>
-                        <td id="actual"></td>
+                        <td><p id="actual" class="calculation"></p></td>
                     </tr>
                     <tr>
                         <td><p>Variance:</p></td>
-                        <td id="variance"></td>
+                        <td><p id="variance" class="calculation"></p></td>
                     </tr>
                 </table>
             </div>
+            
         </div>
+        <br><br><br><br><br>
     </main>
 
 </body>
