--- a/terms.html
+++ b/terms.html
@@ -119,8 +119,10 @@
             <p>Number of days after term end that a member can still renew even if in a lapsed state (Calculated from Term End date). Lapsed period must be grater 
                 than Grace Period to be effective.
             </p>
-            <br>
-
+        </div>
+        
+    </div>
+    <br><br><br><br><br>
     </main>
 
 </body>
