--- a/nav/nav.html
+++ b/nav/nav.html
@@ -25,10 +25,11 @@
         <ul class="sub-menu">
             <li><a class="link_name" href="#">Gaming</a></li>
             <li><a href="cash-flow.html">Cash Flow</a></li>
-            <li><a href="meters.html">Meters</a></li>
+            <li><a href="cashier-balance.html">Float Reconciliation</a></li>
             <li><a href="gaming-tax.html">Gaming Tax</a></li>
             <li><a href="link-reconciliation.html">Link Reconciliation</a></li>
             <li><a href="link-reads.html">Link Reads</a></li>
+            <li><a href="meters.html">Meters</a></li>
         </ul>
         </li>
         <li>
