--- a/cashier-balance.html
+++ b/cashier-balance.html
@@ -50,7 +50,7 @@
                         <td>$5 Notes:</td>
                         <td><input type="number" id="5notes" oninput="calculatetotalNotes()" inputmode="decimal"></td>
                     </tr>
-                    <tr>
+                    <tr style="border-style: double none solid;">
                         <td>Total Notes:</td>
                         <td><p id="totalnotes" class="calculation"></p></td>
                     </tr>
@@ -80,11 +80,11 @@
                         <td><input type="number" id="5coins" oninput="calculatetotalcoins()" inputmode="decimal"></td>
                     </tr>
                     
-                    <tr>
+                    <tr style="border-style: double none solid;">
                         <td>Total Coins:</td>
                         <td><p id="totalcoins" class="calculation"></p></td>
                     </tr>
-                    <tr>
+                    <tr style="border-style: double none solid;">
                         <td>Total Cash:</td>
                         <td><p id="totalcash" class="calculation"></p></td>
                     </tr>
@@ -116,7 +116,7 @@
                         <td>Rounding:</td>
                         <td><input type="number" id="rounding" oninput="calculatetotalmovement()" inputmode="decimal"></td>
                     </tr>
-                    <tr>
+                    <tr style="border-style: double none solid;">
                         <td>Total Movement:</td>
                         <td><p id="totalmovement" class="calculation"></p></td>
                     </tr>
@@ -132,11 +132,11 @@
                         <td>Transferred Out:</td>
                         <td><input type="number" id="transferout" oninput="calculatetotalFloat()" inputmode="decimal"></td>
                     </tr>
-                    <tr>
+                    <tr style="border-style: double none solid;">
                         <td>Total Float:</td>
                         <td><p id="totalfloat" class="calculation"></p></td>
                     </tr>
-                    <tr>
+                    <tr style="border-style: double none solid;">
                         <td>Shift Varaince:</td>
                         <td><p id="shiftvariance" class="calculation"></p></td>
                     </tr>                              
@@ -144,9 +144,9 @@
             </div>
         </div>
         </div>
-         <br><br><br><br><br>
+        <br><br><br><br><br>
     </main>
-   
+    
 </body>
 
 
