--- a/premium-loyalty.html
+++ b/premium-loyalty.html
@@ -38,6 +38,7 @@
                 <br>
             </td></tr>
             </table>
+            <span style="margin: 20px; font-weight: 700;"><i class='bx bx-group' ></i> Patron Count:</span>
                 <table class="table1">
                     <tr>
                         <td class="selector"><button type="button" class="button button1" onclick="calculatemoduleCost(5)">1-5</button></td>
