--- a/premium-loyalty.html
+++ b/premium-loyalty.html
@@ -32,7 +32,7 @@
                 <table class="table0">
                     <tr><td class="selector">
                 <div class="input-group">
-                    <input class="input" required autocomplete="off" type="number" id="egmcount" oninput="calculateegmcount()" step="1" inputmode="decimal">
+                    <input class="input" required autocomplete="off" type="number" id="egmcount" oninput="calculateegmcount()" inputmode="decimal">
                     <label class="label" for="egmcount">Machine Count</label>
                 </div>
                 <br>
