--- a/terms.html
+++ b/terms.html
@@ -32,8 +32,7 @@
         <table>
             <tr>
                 <td><p><label for="termenddate">Term End Date:</label></p></td>
-                <td><input type="date" id="termenddate" oninput="calculateDates()"></td>
-                <td></td>
+                <td colspan="2" style="text-align: left;"><input class="dateselector" type="date" id="termenddate" oninput="calculateDates()"></td>
             </tr>
 
             <tr>
